# shift_face_verification_service

./: .flake8  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile_test  README.md  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: .zshrc  Dockerfile  post-start.sh
.github/workflows/: main.yaml  pre-commit.yaml
helm/face-verification-service-chart/: Chart.yaml  values.yaml
helm/face-verification-service-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
helm/face-verification-service-chart/templates/tests/: test-connection.yaml
kuber/: configmap.yaml  deployment.yaml  pod.yaml  secret.yaml  service.yaml
src/app/: constants.py  main.py
src/app/api/: __init__.py  endpoints.py  schemes.py
src/app/db/: __init__.py  basemodels.py  database.py  models.py
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: 4453dd6a3d47_init.py
src/app/service/: __init__.py  consumer.py  exceptions.py  service.py
src/config/: config.py  config.yaml
src/tests/: conftest.py  test_logic.py  test_service.py
src/tests/integration/: conftest.py  test_api.py
src/tests/unit/: conftest.py  test_consumer.py  test_service.py
stubs/deepface/: DeepFace.pyi
stubs/deepface/basemodels/: Facenet.pyi
