[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vasilii Stakrotckii <inferno681@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
deepface = "^0.0.92"
tf-keras = "^2.16.0"
opencv-python-headless = "^4.10.0.84"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.4.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py312"]
exclude = '''
/(
    \.devcontainer
  | \.git
  | \.venv
  | \.vscode
)/
'''
