[tool.poetry]
name = "src"
version = "0.2.1"
description = ""
authors = ["Vasilii Stakrotckii <inferno681@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
deepface = "^0.0.92"
tf-keras = "^2.16.0"
opencv-python-headless = "^4.10.0.84"
pydantic-settings = "^2.3.4"
fastapi = "^0.111.1"
aiokafka = "^0.11.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.1"
wemake-python-styleguide = "^0.19.2"
types-pyyaml = "^6.0.12.20240724"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
