[tool.poetry]
name = "src"
version = "0.4.0"
description = ""
authors = ["Vasilii Stakrotckii <inferno681@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
deepface = "^0.0.92"
tf-keras = "^2.16.0"
opencv-python-headless = "^4.10.0.84"
pydantic-settings = "^2.3.4"
fastapi = "^0.111.1"
aiokafka = "^0.11.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pgvector = "^0.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.1"
wemake-python-styleguide = "^0.19.2"
types-pyyaml = "^6.0.12.20240724"
asgi-lifespan = "^2.1.0"
sqlalchemy-utils = "^0.41.2"
types-sqlalchemy-utils = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
